--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -397,30 +397,74 @@ nav {
 
 .recipes-container {
   background: white;
-  width: 65%;
+  width: 55%;
+  height: 75%;
   position: relative;
   top: 50%;
+  right: 5%;
   transform: translateY(-50%);
   margin: 0 auto;
-  display: inline-block;
+  display: flex;
+  box-shadow: -8px 10px 30px #2225;
 }
 
-.left-recipes-container {
-  background: white;
-  width: 40%;
-  float: left;
-}
-
-.left-recipes-container img {
-  /* max-width: 100%; */
-  object-fit: cover;
+.recipes-container img {
+  max-width: 100%;
+  max-height: 100%;
+  flex-basis: 30%;
 }
 
 .right-recipes-container {
-  /* width: 70%; */
-  float: right;
+  position: relative;
+  padding: 3.5rem 5.5rem 0 3.5rem;
 }
 
 .right-recipes-container * {
   text-align: left;
+  
+}
+
+.right-recipes-container p {
+  padding-top: 4.0rem;
+}
+
+.carousel {
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  
+}
+
+.carousel * {
+  /* padding: 0 0.5rem 2.0rem 0.5rem; */
+  vertical-align: middle;
+  display: inline-block;
+}
+
+.carousel img {
+  
+  border-radius: 50%;
+  max-width: 25%;
+}
+
+.carousel-arrow {
+  border-radius: 50%;
+  border: solid 2px var(--dark-colored-text);
+  padding: 1.0rem;
+  height: 1.0rem;
+  widows: 1.0rem;
+}
+
+.time-box {
+  background-color: white;
+  position: absolute;
+  top: -9%;
+  right: -10%;
+  height: 10vw;
+  width: 10vw;
+  box-shadow: -8px 10px 30px #2225;
+}
+
+.time-box * {
+  text-align: center;
 }
