--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Alegreya:400,500|Montserrat|Playfair+Display|Allura');
+@import url('https://fonts.googleapis.com/css?family=Alegreya:400,500|Montserrat:400,500|Playfair+Display|Allura');
 
 :root {
   --heading-font: 'Alegreya', serif;
@@ -72,6 +72,7 @@ a:hover {
 p {
   font-size: 0.75rem;
   font-family: var(--body-font);
+  font-weight: 500;
   line-height: 1.5rem;
   margin: 0;
 }
@@ -170,6 +171,8 @@ nav {
 
 .blurb {
   font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 2.25rem;
 }
 
 .hero-btn {
@@ -408,20 +411,25 @@ nav {
   box-shadow: -8px 10px 30px #2225;
 }
 
-.recipes-container img {
+.recipes-container>img {
   max-width: 100%;
   max-height: 100%;
-  flex-basis: 30%;
 }
 
 .right-recipes-container {
   position: relative;
-  padding: 4.5rem 5.5rem 0 4.0rem;
 }
 
-.right-recipes-container * {
+.right-recipes-container p,
+.right-recipes-container h3,
+.right-recipes-container h5 {
   text-align: left;
-  
+  padding-right: 5.5rem;
+  padding-left: 4.0rem;
+}
+
+.right-recipes-container h3 {
+  padding-top: 4.5rem
 }
 
 .right-recipes-container p {
@@ -432,27 +440,50 @@ nav {
   text-align: center;
   position: absolute;
   bottom: 0;
-  
+  padding-bottom: 2.5rem;
 }
 
 .carousel * {
-  /* padding: 0 0.5rem 2.0rem 0.5rem; */
   vertical-align: middle;
   display: inline-block;
 }
 
 .carousel img {
-  
+  padding: 0 0.75rem;
   border-radius: 50%;
-  max-width: 25%;
+  max-width: 22.5%;
+  transition-duration: 0.25s;
+}
+
+.carousel img:hover {
+  transition-duration: 0.25s;
+  transform: scale(1.2);
 }
 
 .carousel-arrow {
+  position: relative;
+  color: var(--dark-colored-text);
   border-radius: 50%;
   border: solid 2px var(--dark-colored-text);
-  padding: 1.0rem;
-  height: 1.0rem;
-  widows: 1.0rem;
+  padding: 1rem;
+  width: 1.5rem;
+  height: 1.5rem;
+  
+}
+
+.carousel-arrow>div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  font-size: 1.25rem;
+  line-height: 0;
+}
+
+.carousel-arrow:hover,
+.carousel-arrow i {
+  border-color: var(--light-colored-text);
+  color: var(--light-colored-text);
 }
 
 .time-box {
